# Bias-Spotter

./: .gitignore  README.md  cogbias-build-plan.md  cogbias-claude-code-prompt.md
backend/: .env.example  README.md  TAXONOMY.md  pyproject.toml  requirements-dev.txt  requirements-training.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/cache/: __init__.py  cache.py
backend/app/lexicon/: techniques.yaml
backend/app/parser/: __init__.py  document_parser.py
backend/app/pipeline/: __init__.py  aggregator.py  layer1_lexicon.py  layer2_classifier.py  layer3_llm.py
backend/app/scoring/: __init__.py  density.py  percentile.py
backend/tests/: test_aggregator.py  test_layer1.py  test_smoke.py
frontend/: index.html
training/notebooks/: .gitkeep
training/scripts/: download_datasets.py  train_span_identifier.py  train_technique_classifier.py
