[project]
name = "cogbias-spotter"
version = "0.1.0"
description = "Cognitive Bias Spotter — persuasion technique detection via fine-tuned classifier"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "transformers>=4.45.0",
    "datasets>=3.0.0",
    "torch>=2.2.0",
    "scikit-learn>=1.5.0",
    "spacy>=3.7.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "pyyaml>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "pdfplumber>=0.11.0",
    "huggingface-hub>=0.25.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
training = [
    "jupyter>=1.1.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "wandb>=0.18.0",
    "optuna>=4.0.0",
    "accelerate>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
